Fixes #460 - modal component horizontally not centered in IE

--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -11,7 +11,7 @@
   width: 100%
   // Responsiveness
   +tablet
-    margin: 0 auto
+    margin: 0
     max-height: calc(100vh - 40px)
     width: 640px
 
